--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0",
     "xml-loader": "^1.2.1"
   },
   "scripts": {
     "dev": "webpack -w --mode development --config webpack.config.js",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
