--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "csv-loader": "^3.0.2",
+    "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
+    "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.2.0",
     "xml-loader": "^1.2.1"
   },
   "scripts": {
     "dev": "webpack -w --mode development --config webpack.config.js",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
