--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "xml-loader": "^1.2.1"
   },
   "scripts": {
-    "dev": "webpack -w --mode development --config webpack.config.js",
+    "dev": "webpack-dev-server --hotOnly --mode development --config webpack.config.js",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open",
     "server": "node server.js"
